<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>MineChat</groupId>
	<artifactId>MineChat</artifactId>
	<version>0.0.9-SNAPSHOT</version>
	<description>Chat tool for twitch IRC.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<javafx.version>25-ea+21</javafx.version>
		<slf4j.version>2.0.17</slf4j.version>
		<snakeyaml.version>2.4</snakeyaml.version>
		<twitch4j.version>1.25.0</twitch4j.version>
		<google.gson.version>2.13.1</google.gson.version>
		<sqlite.version>3.49.1.0</sqlite.version>
		<eclipse.store.version>3.1.0</eclipse.store.version>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>res</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>de.minetrain.minechat.main.Launcher</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>${snakeyaml.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.twitch4j</groupId>
			<artifactId>twitch4j</artifactId>
			<version>${twitch4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${google.gson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>storage-embedded</artifactId>
			<version>${eclipse.store.version}</version>
		</dependency>
	</dependencies>
</project>